--- a/Views/LoanBee/CreateLoanApplication.cshtml
+++ b/Views/LoanBee/CreateLoanApplication.cshtml
@@ -8,7 +8,7 @@
     <h2 class="mb-4">Loan Application Form</h2>
 
     <form asp-action="CreateLoanApplication" method="post">
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <div asp-validation-summary="All" class="text-danger"></div>
 
         <div class="card mb-4 shadow-sm">
             <div class="card-header bg-primary text-white">Loan Details</div>
