Fix routing and move view models

--- a/Areas/Admin/Views/Home/Details.cshtml
+++ b/Areas/Admin/Views/Home/Details.cshtml
@@ -2,6 +2,8 @@
     ViewData["Title"] = "Application Details";
 }
 
+@model LoanBee.Areas.Admin.Models.AdminLoanApplicationDetailsVm
+
 <div class="container py-4">
 
     <div class="d-flex flex-wrap justify-content-between align-items-center gap-2 mb-3">
