--- a/Areas/Admin/Views/Home/Index.cshtml
+++ b/Areas/Admin/Views/Home/Index.cshtml
@@ -1,8 +1,8 @@
-﻿@* @model LoanBee.Areas.Admin.Controllers.AdminHomeVm *@
-
-@{
+﻿@{
     ViewData["Title"] = "Admin Dashboard";
 }
+
+@model LoanBee.Areas.Admin.Models.AdminLoanApplicationsVm
 
 <div class="container-fluid mt-4">
     <h2 class="display-5 fw-bold mb-1">Admin Dashboard</h2>
